--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@
     height: 100vh;
     display: flex;
     width: 100%;
+    position: fixed;
   }
 
   i {
@@ -741,6 +742,10 @@
     height: 100%;
     justify-content: space-evenly;
     align-items: center;
+  }
+
+  .sm-header {
+    position: fixed;
   }
 
   .l2,
