--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,45 @@
   }
 
   /***/
+  .sl1 {
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+    padding: 9px 0px;
+    display: none;
+    width: 150px;
+    position: absolute;
+    display: block;
+    top: 40px;
+    left: 170px;
+    z-index: 2;
+  }
+
+  .left-side-ellipsis-box-padding {
+    padding-bottom: 4px;
+    padding-left: 20px;
+  }
+
+  .sl2 {
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+    padding: 9px 0px;
+    display: none;
+    width: 150px;
+    position: absolute;
+    display: block;
+    top: 40px;
+    left: -10px;
+    z-index: 2;
+  }
+
+  .right-side-ellipsis-box-padding {
+    padding-bottom: 4px;
+    padding-left: 20px;
+  }
+
+  /***/
   /*** scroll functionality ***/
   .chat-history {
     overflow-y: scroll;
@@ -228,6 +267,44 @@
   }
 
   /***/
+  .sl1 {
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+    padding: 9px 0px;
+    display: none;
+    width: 150px;
+    position: absolute;
+    display: block;
+    top: 40px;
+    left: 170px;
+    z-index: 2;
+  }
+
+  .left-side-ellipsis-box-padding {
+    padding-bottom: 4px;
+    padding-left: 20px;
+  }
+
+  .sl2 {
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+    padding: 9px 0px;
+    display: none;
+    width: 150px;
+    position: absolute;
+    display: block;
+    top: 40px;
+    left: -10px;
+    z-index: 2;
+  }
+
+  .right-side-ellipsis-box-padding {
+    padding-bottom: 4px;
+    padding-left: 20px;
+  }
+
   /*** scroll functionality ***/
   .chat-history {
     overflow-y: scroll;
@@ -450,6 +527,25 @@
   }
 
   /***/
+  .sl1 {
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+    padding: 9px 0px;
+    display: none;
+    width: 150px;
+    position: absolute;
+    display: block;
+    top: 40px;
+    left: 170px;
+    z-index: 2;
+  }
+
+  .left-side-ellipsis-box-padding {
+    padding-bottom: 4px;
+    padding-left: 20px;
+  }
+
   /*** scroll functionality ***/
   .chat-history {
     overflow-y: scroll;
@@ -673,6 +769,25 @@
     display: none;
   }
 
+  .sl1 {
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+    padding: 9px 0px;
+    display: none;
+    width: 150px;
+    position: absolute;
+    display: block;
+    top: 40px;
+    left: 170px;
+    z-index: 2;
+  }
+
+  .left-side-ellipsis-box-padding {
+    padding-bottom: 4px;
+    padding-left: 20px;
+  }
+
   /*** scroll functionality ***/
   .chat-history {
     overflow-y: scroll;
@@ -746,6 +861,10 @@
 
   .sm-header {
     position: fixed;
+  }
+
+  i {
+    color: #82898c;
   }
 
   .l2,
@@ -848,6 +967,46 @@ body {
   /***/
   .x {
     display: contents;
+  }
+
+  /***/
+  /***/
+  .sl1 {
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+    padding: 9px 0px;
+    display: none;
+    width: 150px;
+    position: absolute;
+    display: block;
+    top: 40px;
+    left: 170px;
+    z-index: 2;
+  }
+
+  .left-side-ellipsis-box-padding {
+    padding-bottom: 4px;
+    padding-left: 20px;
+  }
+
+  .sl2 {
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+    padding: 9px 0px;
+    display: none;
+    width: 150px;
+    position: absolute;
+    display: block;
+    top: 40px;
+    left: -10px;
+    z-index: 2;
+  }
+
+  .right-side-ellipsis-box-padding {
+    padding-bottom: 4px;
+    padding-left: 20px;
   }
 
   /***/
