--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,8 @@
     position: absolute;
     display: block;
     top: 40px;
-    left: -10px;
+    right: 0;
+    margin-right: 10%;
     z-index: 2;
   }
 
@@ -296,7 +297,8 @@
     position: absolute;
     display: block;
     top: 40px;
-    left: -10px;
+    right: 0;
+    margin-right: 10%;
     z-index: 2;
   }
 
@@ -546,6 +548,26 @@
     padding-left: 20px;
   }
 
+  .sl2 {
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+    padding: 9px 0px;
+    display: none;
+    width: 150px;
+    position: absolute;
+    display: block;
+    top: 40px;
+    right: 0;
+    margin-right: 10%;
+    z-index: 2;
+  }
+
+  .right-side-ellipsis-box-padding {
+    padding-bottom: 4px;
+    padding-left: 20px;
+  }
+
   /*** scroll functionality ***/
   .chat-history {
     overflow-y: scroll;
@@ -779,7 +801,8 @@
     position: absolute;
     display: block;
     top: 40px;
-    left: 170px;
+    right: 0;
+    margin-right: 10%;
     z-index: 2;
   }
 
@@ -1000,7 +1023,8 @@ body {
     position: absolute;
     display: block;
     top: 40px;
-    left: -10px;
+    right: 0;
+    margin-right: 10%;
     z-index: 2;
   }
 
